Introdotto il nuovo device keiser M3i e corretti bachi vari

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="exm_errp_disablingbluetooth">Disattivo bluetooth&#8230;</string>
     <string name="exm_errr_connectionlost">Persa la connessione a %1$s</string>
     <string name="exm_errr_connectionfailed">Connessione fallita a %1$s</string>
+    <string name="exm_errr_nonconn_multipletileout">Il dispositivo %1$s non risponde</string>
     <string name="exm_errr_pafers_program">Programma non valido %2$s per il dispositivo %1$s</string>
     <string name="plot">Grafico</string>
     <string name="button">Comandi</string>
@@ -293,5 +294,7 @@
     <string name="pref_confsh_title">Shortcut</string>
     <string name="pref_device_wahoobluesc_currentgear_title">Marcia Corrente</string>
     <string name="pref_device_wahoobluesc_gearfactor_title">Whl/Crk</string>
+    <string name="pref_device_type_keiserm3i">Keiser M3i</string>
+    <string name="auth_ok_restart">Authorization OK. Please restart app</string>
 
 </resources>
