Migliorata gestione subsettings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -297,5 +297,6 @@
     <string name="pref_device_type_keiserm3i">Keiser M3i</string>
     <string name="auth_ok_restart">Authorization OK. Please restart app</string>
     <string name="pref_device_m3i_machineid_title">ID Macchina</string>
+    <string name="pref_device_m3i_buffsize_title">Buffer distanza</string>
 
 </resources>
